--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -68,3 +68,10 @@
 #grid-container.spreadsheet .ng-invalid {
   color: red;
 }
+
+.hci-grid.column-header-tooltip {
+  background-color: black;
+  color: white;
+  border-radius: 1rem;
+  padding: 0.25rem 0.5rem;
+}
